--- a/var.css
+++ b/var.css
@@ -3,7 +3,7 @@ body {
     background-color: #f0f0f0;
     margin: 0; /* Remove default margin to fill the entire viewport */
     padding: 0; /* Remove default padding */
-    background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20201026/pngtree-abstract-big-data-visualization-digital-network-connection-concept-background-image_438815.jpg'); /* Replace with your image URL */
+    background-image: url('https://wallpaperaccess.com/full/3959308.jpg'); /* Replace with your image URL */
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
